Commit/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error CompSt
    8       | error Specifier FunDec CompSt
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT OptTag LC error RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | ε

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | LC DefList error RC
   31       | error LC DefList StmtList RC

   32 StmtList: Stmt StmtList
   33         | ε

   34 Stmt: Exp SEMI
   35     | error SEMI
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | RETURN error SEMI
   39     | IF LP Exp RP Stmt
   40     | IF LP error RP Stmt
   41     | IF LP Exp RP Stmt ELSE Stmt
   42     | IF LP error RP Stmt ELSE Stmt
   43     | IF LP Exp RP error ELSE Stmt
   44     | WHILE LP Exp RP Stmt
   45     | WHILE LP error RP Stmt

   46 DefList: Def DefList
   47        | ε

   48 Def: Specifier DecList SEMI
   49    | Specifier error SEMI

   50 DecList: Dec
   51        | Dec COMMA DecList

   52 Dec: VarDec
   53    | VarDec ASSIGNOP Exp

   54 Exp: Exp ASSIGNOP Exp
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp RELOP Exp
   58    | Exp PLUS Exp
   59    | Exp MINUS Exp
   60    | Exp STAR Exp
   61    | Exp DIV Exp
   62    | LP Exp RP
   63    | LP error RP
   64    | LP error SEMI
   65    | LP error RC
   66    | MINUS Exp
   67    | NOT Exp
   68    | ID LP Args RP
   69    | ID LP error RP
   70    | ID LP RP
   71    | Exp LB Exp RB
   72    | Exp LB error RB
   73    | Exp LB error SEMI
   74    | Exp LB error RC
   75    | Exp DOT ID
   76    | ID
   77    | INT
   78    | FLOAT

   79 Args: Exp COMMA Args
   80     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 15 22 25 30 31 35 38 40 42 43 45 49 63 64 65 69 72 73 74
    RELOP (258) 57
    AND (259) 55
    OR (260) 56
    SEMI (261) 4 5 9 34 35 37 38 48 49 64 73
    COMMA (262) 11 26 51 79
    ASSIGNOP (263) 53 54
    PLUS (264) 58
    MINUS (265) 59 66
    STAR (266) 60
    DIV (267) 61
    DOT (268) 75
    NOT (269) 67
    TYPE (270) 12
    LP (271) 23 24 39 40 41 42 43 44 45 62 63 64 65 68 69 70
    RP (272) 23 24 25 39 40 41 42 43 44 45 62 63 68 69 70
    LB (273) 21 22 71 72 73 74
    RB (274) 21 22 71 72
    LC (275) 14 15 29 30 31
    RC (276) 14 15 29 30 31 65 74
    STRUCT (277) 14 15 16
    RETURN (278) 37 38
    IF (279) 39 40 41 42 43
    ELSE (280) 41 42 43
    WHILE (281) 44 45
    INT (282) 21 77
    FLOAT (283) 78
    ID (284) 17 19 20 23 24 68 69 70 75 76
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program (32)
        on left: 1
        on right: 0
    ExtDefList (33)
        on left: 2 3
        on right: 1 2
    ExtDef (34)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList (35)
        on left: 10 11
        on right: 4 11
    Specifier (36)
        on left: 12 13
        on right: 4 5 6 7 8 28 48 49
    StructSpecifier (37)
        on left: 14 15 16
        on right: 13
    OptTag (38)
        on left: 17 18
        on right: 14 15
    Tag (39)
        on left: 19
        on right: 16
    VarDec (40)
        on left: 20 21 22
        on right: 10 11 21 22 28 52 53
    FunDec (41)
        on left: 23 24 25
        on right: 6 8
    VarList (42)
        on left: 26 27
        on right: 23 26
    ParamDec (43)
        on left: 28
        on right: 26 27
    CompSt (44)
        on left: 29 30 31
        on right: 6 7 8 36
    StmtList (45)
        on left: 32 33
        on right: 29 31 32
    Stmt (46)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 32 39 40 41 42 43 44 45
    DefList (47)
        on left: 46 47
        on right: 14 29 30 31 46
    Def (48)
        on left: 48 49
        on right: 46
    DecList (49)
        on left: 50 51
        on right: 48 51
    Dec (50)
        on left: 52 53
        on right: 50 51
    Exp (51)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 34 37 39 41 43 44 53 54 55 56 57 58 59 60 61 62 66 67 71 72 73 74 75 79 80
    Args (52)
        on left: 79 80
        on right: 68 79


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error • Specifier FunDec CompSt
    9       | error • SEMI

    SEMI    shift, and go to state 9
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 10
    StructSpecifier  go to state 8


State 2

   12 Specifier: TYPE •

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT • OptTag LC DefList RC
   15                | STRUCT • OptTag LC error RC
   16                | STRUCT • Tag

    ID  shift, and go to state 11

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • error CompSt

    error  shift, and go to state 16
    SEMI   shift, and go to state 17
    ID     shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   13 Specifier: StructSpecifier •

    $default  reduce using rule 13 (Specifier)


State 9

    9 ExtDef: error SEMI •

    $default  reduce using rule 9 (ExtDef)


State 10

    8 ExtDef: error Specifier • FunDec CompSt

    error  shift, and go to state 22
    ID     shift, and go to state 23

    FunDec  go to state 24


State 11

   17 OptTag: ID •
   19 Tag: ID •

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 12

   14 StructSpecifier: STRUCT OptTag • LC DefList RC
   15                | STRUCT OptTag • LC error RC

    LC  shift, and go to state 25


State 13

   16 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 16 (StructSpecifier)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 16

    7 ExtDef: Specifier error • CompSt
   25 FunDec: error • RP

    error  shift, and go to state 26
    RP     shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 17

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 18

   20 VarDec: ID •
   23 FunDec: ID • LP VarList RP
   24       | ID • LP RP

    LP  shift, and go to state 30

    $default  reduce using rule 20 (VarDec)


State 19

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 31


State 20

   10 ExtDecList: VarDec •
   11           | VarDec • COMMA ExtDecList
   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB

    COMMA  shift, and go to state 32
    LB     shift, and go to state 33

    $default  reduce using rule 10 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec • CompSt

    error  shift, and go to state 26
    LC     shift, and go to state 28

    CompSt  go to state 34


State 22

   25 FunDec: error • RP

    RP  shift, and go to state 27


State 23

   23 FunDec: ID • LP VarList RP
   24       | ID • LP RP

    LP  shift, and go to state 30


State 24

    8 ExtDef: error Specifier FunDec • CompSt

    error  shift, and go to state 26
    LC     shift, and go to state 28

    CompSt  go to state 35


State 25

   14 StructSpecifier: STRUCT OptTag LC • DefList RC
   15                | STRUCT OptTag LC • error RC

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 47 (DefList)

    Specifier        go to state 37
    StructSpecifier  go to state 8
    DefList          go to state 38
    Def              go to state 39


State 26

   31 CompSt: error • LC DefList StmtList RC

    LC  shift, and go to state 40


State 27

   25 FunDec: error RP •

    $default  reduce using rule 25 (FunDec)


State 28

   29 CompSt: LC • DefList StmtList RC
   30       | LC • DefList error RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 37
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 39


State 29

    7 ExtDef: Specifier error CompSt •

    $default  reduce using rule 7 (ExtDef)


State 30

   23 FunDec: ID LP • VarList RP
   24       | ID LP • RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 42
    STRUCT  shift, and go to state 3

    Specifier        go to state 43
    StructSpecifier  go to state 8
    VarList          go to state 44
    ParamDec         go to state 45


State 31

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 32

   11 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 46

    ExtDecList  go to state 47
    VarDec      go to state 20


State 33

   21 VarDec: VarDec LB • INT RB
   22       | VarDec LB • error RB

    error  shift, and go to state 48
    INT    shift, and go to state 49


State 34

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 35

    8 ExtDef: error Specifier FunDec CompSt •

    $default  reduce using rule 8 (ExtDef)


State 36

   15 StructSpecifier: STRUCT OptTag LC error • RC

    RC  shift, and go to state 50


State 37

   48 Def: Specifier • DecList SEMI
   49    | Specifier • error SEMI

    error  shift, and go to state 51
    ID     shift, and go to state 46

    VarDec   go to state 52
    DecList  go to state 53
    Dec      go to state 54


State 38

   14 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 55


State 39

   46 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 37
    StructSpecifier  go to state 8
    DefList          go to state 56
    Def              go to state 39


State 40

   31 CompSt: error LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 37
    StructSpecifier  go to state 8
    DefList          go to state 57
    Def              go to state 39


State 41

   29 CompSt: LC DefList • StmtList RC
   30       | LC DefList • error RC

    error   shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 28
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 69
    Stmt      go to state 70
    Exp       go to state 71


State 42

   24 FunDec: ID LP RP •

    $default  reduce using rule 24 (FunDec)


State 43

   28 ParamDec: Specifier • VarDec

    ID  shift, and go to state 46

    VarDec  go to state 72


State 44

   23 FunDec: ID LP VarList • RP

    RP  shift, and go to state 73


State 45

   26 VarList: ParamDec • COMMA VarList
   27        | ParamDec •

    COMMA  shift, and go to state 74

    $default  reduce using rule 27 (VarList)


State 46

   20 VarDec: ID •

    $default  reduce using rule 20 (VarDec)


State 47

   11 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 48

   22 VarDec: VarDec LB error • RB

    RB  shift, and go to state 75


State 49

   21 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 76


State 50

   15 StructSpecifier: STRUCT OptTag LC error RC •

    $default  reduce using rule 15 (StructSpecifier)


State 51

   49 Def: Specifier error • SEMI

    SEMI  shift, and go to state 77


State 52

   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB
   52 Dec: VarDec •
   53    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 78
    LB        shift, and go to state 33

    $default  reduce using rule 52 (Dec)


State 53

   48 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 79


State 54

   50 DecList: Dec •
   51        | Dec • COMMA DecList

    COMMA  shift, and go to state 80

    $default  reduce using rule 50 (DecList)


State 55

   14 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 14 (StructSpecifier)


State 56

   46 DefList: Def DefList •

    $default  reduce using rule 46 (DefList)


State 57

   31 CompSt: error LC DefList • StmtList RC

    error   shift, and go to state 81
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 28
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 82
    Stmt      go to state 70
    Exp       go to state 71


State 58

   30 CompSt: LC DefList error • RC
   31       | error • LC DefList StmtList RC
   35 Stmt: error • SEMI

    SEMI  shift, and go to state 83
    LC    shift, and go to state 40
    RC    shift, and go to state 84


State 59

   66 Exp: MINUS • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 85


State 60

   67 Exp: NOT • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 86


State 61

   62 Exp: LP • Exp RP
   63    | LP • error RP
   64    | LP • error SEMI
   65    | LP • error RC

    error  shift, and go to state 87
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 88


State 62

   37 Stmt: RETURN • Exp SEMI
   38     | RETURN • error SEMI

    error  shift, and go to state 89
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 90


State 63

   39 Stmt: IF • LP Exp RP Stmt
   40     | IF • LP error RP Stmt
   41     | IF • LP Exp RP Stmt ELSE Stmt
   42     | IF • LP error RP Stmt ELSE Stmt
   43     | IF • LP Exp RP error ELSE Stmt

    LP  shift, and go to state 91


State 64

   44 Stmt: WHILE • LP Exp RP Stmt
   45     | WHILE • LP error RP Stmt

    LP  shift, and go to state 92


State 65

   77 Exp: INT •

    $default  reduce using rule 77 (Exp)


State 66

   78 Exp: FLOAT •

    $default  reduce using rule 78 (Exp)


State 67

   68 Exp: ID • LP Args RP
   69    | ID • LP error RP
   70    | ID • LP RP
   76    | ID •

    LP  shift, and go to state 93

    $default  reduce using rule 76 (Exp)


State 68

   36 Stmt: CompSt •

    $default  reduce using rule 36 (Stmt)


State 69

   29 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 94


State 70

   32 StmtList: Stmt • StmtList

    error   shift, and go to state 81
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 28
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 68
    StmtList  go to state 95
    Stmt      go to state 70
    Exp       go to state 71


State 71

   34 Stmt: Exp • SEMI
   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   71    | Exp • LB Exp RB
   72    | Exp • LB error RB
   73    | Exp • LB error SEMI
   74    | Exp • LB error RC
   75    | Exp • DOT ID

    RELOP     shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    DOT       shift, and go to state 105
    LB        shift, and go to state 106


State 72

   21 VarDec: VarDec • LB INT RB
   22       | VarDec • LB error RB
   28 ParamDec: Specifier VarDec •

    LB  shift, and go to state 33

    $default  reduce using rule 28 (ParamDec)


State 73

   23 FunDec: ID LP VarList RP •

    $default  reduce using rule 23 (FunDec)


State 74

   26 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 43
    StructSpecifier  go to state 8
    VarList          go to state 107
    ParamDec         go to state 45


State 75

   22 VarDec: VarDec LB error RB •

    $default  reduce using rule 22 (VarDec)


State 76

   21 VarDec: VarDec LB INT RB •

    $default  reduce using rule 21 (VarDec)


State 77

   49 Def: Specifier error SEMI •

    $default  reduce using rule 49 (Def)


State 78

   53 Dec: VarDec ASSIGNOP • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 108


State 79

   48 Def: Specifier DecList SEMI •

    $default  reduce using rule 48 (Def)


State 80

   51 DecList: Dec COMMA • DecList

    ID  shift, and go to state 46

    VarDec   go to state 52
    DecList  go to state 109
    Dec      go to state 54


State 81

   31 CompSt: error • LC DefList StmtList RC
   35 Stmt: error • SEMI

    SEMI  shift, and go to state 83
    LC    shift, and go to state 40


State 82

   31 CompSt: error LC DefList StmtList • RC

    RC  shift, and go to state 110


State 83

   35 Stmt: error SEMI •

    $default  reduce using rule 35 (Stmt)


State 84

   30 CompSt: LC DefList error RC •

    $default  reduce using rule 30 (CompSt)


State 85

   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   66    | MINUS Exp •
   71    | Exp • LB Exp RB
   72    | Exp • LB error RB
   73    | Exp • LB error SEMI
   74    | Exp • LB error RC
   75    | Exp • DOT ID

    STAR  shift, and go to state 103
    DIV   shift, and go to state 104
    DOT   shift, and go to state 105
    LB    shift, and go to state 106

    $default  reduce using rule 66 (Exp)


State 86

   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   67    | NOT Exp •
   71    | Exp • LB Exp RB
   72    | Exp • LB error RB
   73    | Exp • LB error SEMI
   74    | Exp • LB error RC
   75    | Exp • DOT ID

    DOT  shift, and go to state 105
    LB   shift, and go to state 106

    $default  reduce using rule 67 (Exp)


State 87

   63 Exp: LP error • RP
   64    | LP error • SEMI
   65    | LP error • RC

    SEMI  shift, and go to state 111
    RP    shift, and go to state 112
    RC    shift, and go to state 113


State 88

   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   62    | LP Exp • RP
   71    | Exp • LB Exp RB
   72    | Exp • LB error RB
   73    | Exp • LB error SEMI
   74    | Exp • LB error RC
   75    | Exp • DOT ID

    RELOP     shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    ASSIGNOP  shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    DOT       shift, and go to state 105
    RP        shift, and go to state 114
    LB        shift, and go to state 106


State 89

   38 Stmt: RETURN error • SEMI

    SEMI  shift, and go to state 115


State 90

   37 Stmt: RETURN Exp • SEMI
   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   71    | Exp • LB Exp RB
   72    | Exp • LB error RB
   73    | Exp • LB error SEMI
   74    | Exp • LB error RC
   75    | Exp • DOT ID

    RELOP     shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    SEMI      shift, and go to state 116
    ASSIGNOP  shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    DOT       shift, and go to state 105
    LB        shift, and go to state 106


State 91

   39 Stmt: IF LP • Exp RP Stmt
   40     | IF LP • error RP Stmt
   41     | IF LP • Exp RP Stmt ELSE Stmt
   42     | IF LP • error RP Stmt ELSE Stmt
   43     | IF LP • Exp RP error ELSE Stmt

    error  shift, and go to state 117
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 118


State 92

   44 Stmt: WHILE LP • Exp RP Stmt
   45     | WHILE LP • error RP Stmt

    error  shift, and go to state 119
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 120


State 93

   68 Exp: ID LP • Args RP
   69    | ID LP • error RP
   70    | ID LP • RP

    error  shift, and go to state 121
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    RP     shift, and go to state 122
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp   go to state 123
    Args  go to state 124


State 94

   29 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 29 (CompSt)


State 95

   32 StmtList: Stmt StmtList •

    $default  reduce using rule 32 (StmtList)


State 96

   57 Exp: Exp RELOP • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 125


State 97

   55 Exp: Exp AND • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 126


State 98

   56 Exp: Exp OR • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 127


State 99

   34 Stmt: Exp SEMI •

    $default  reduce using rule 34 (Stmt)


State 100

   54 Exp: Exp ASSIGNOP • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 128


State 101

   58 Exp: Exp PLUS • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 129


State 102

   59 Exp: Exp MINUS • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 130


State 103

   60 Exp: Exp STAR • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 131


State 104

   61 Exp: Exp DIV • Exp

    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 132


State 105

   75 Exp: Exp DOT • ID

    ID  shift, and go to state 133


State 106

   71 Exp: Exp LB • Exp RB
   72    | Exp LB • error RB
   73    | Exp LB • error SEMI
   74    | Exp LB • error RC

    error  shift, and go to state 134
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67

    Exp  go to state 135


State 107

   26 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 26 (VarList)


State 108

   53 Dec: VarDec ASSIGNOP Exp •
   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   71    | Exp • LB Exp RB
   72    | Exp • LB error RB
   73    | Exp • LB error SEMI
   74    | Exp • LB error RC
   75    | Exp • DOT ID

    RELOP     shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    ASSIGNOP  shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    DOT       shift, and go to state 105
    LB        shift, and go to state 106

    $default  reduce using rule 53 (Dec)


State 109

   51 DecList: Dec COMMA DecList •

    $default  reduce using rule 51 (DecList)


State 110

   31 CompSt: error LC DefList StmtList RC •

    $default  reduce using rule 31 (CompSt)


State 111

   64 Exp: LP error SEMI •

    $default  reduce using rule 64 (Exp)


State 112

   63 Exp: LP error RP •

    $default  reduce using rule 63 (Exp)


State 113

   65 Exp: LP error RC •

    $default  reduce using rule 65 (Exp)


State 114

   62 Exp: LP Exp RP •

    $default  reduce using rule 62 (Exp)


State 115

   38 Stmt: RETURN error SEMI •

    $default  reduce using rule 38 (Stmt)


State 116

   37 Stmt: RETURN Exp SEMI •

    $default  reduce using rule 37 (Stmt)


State 117

   40 Stmt: IF LP error • RP Stmt
   42     | IF LP error • RP Stmt ELSE Stmt

    RP  shift, and go to state 136


State 118

   39 Stmt: IF LP Exp • RP Stmt
   41     | IF LP Exp • RP Stmt ELSE Stmt
   43     | IF LP Exp • RP error ELSE Stmt
   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   71    | Exp • LB Exp RB
   72    | Exp • LB error RB
   73    | Exp • LB error SEMI
   74    | Exp • LB error RC
   75    | Exp • DOT ID

    RELOP     shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    ASSIGNOP  shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    DOT       shift, and go to state 105
    RP        shift, and go to state 137
    LB        shift, and go to state 106


State 119

   45 Stmt: WHILE LP error • RP Stmt

    RP  shift, and go to state 138


State 120

   44 Stmt: WHILE LP Exp • RP Stmt
   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   71    | Exp • LB Exp RB
   72    | Exp • LB error RB
   73    | Exp • LB error SEMI
   74    | Exp • LB error RC
   75    | Exp • DOT ID

    RELOP     shift, and go to state 96
    AND       shift, and go to state 97
    OR        shift, and go to state 98
    ASSIGNOP  shift, and go to state 100
    PLUS      shift, and go to state 101
    MINUS     shift, and go to state 102
    STAR      shift, and go to state 103
    DIV       shift, and go to state 104
    DOT       shift, and go to state 105
    RP        shift, and go to state 139
    LB        shift, and go to state 106


State 121

   69 Exp: ID LP error • RP

    RP  shift, and go to state 140


State 122

   70 Exp: ID LP RP •

    $default  reduce using rule 70 (Exp)


State 123
